# FacadeCPPExample

./: CMakeLists.txt  FileFormatFacade.cpp  FileFormatFacade.h  FileFormatIdentifier.cpp  FileFormatIdentifier.h  README.md  file_formats.cpp  file_formats.h  main.cpp  run.sh
formatters/: DocFormatter.cpp  DocFormatter.h  Formatter.h  ImageFormater.cpp  ImageFormater.h  VideoFormater.cpp  VideoFormater.h
